# Moire-Pattern-Detection

./: .gitignore  Playground.ipynb  pyproject.toml
src/: Playground.ipynb  createTrainingData.py  haar2D.py  mCNN.py  test.py  train.py
