[tool.poetry]
name = "moire-pattern-detection"
version = "0.1.0"
description = "Moiré Pattern Detection using Wavelet Decomposition and Convolutional Neural Network"
authors = ["E. Abraham <eldho.abraham@amadeus.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
tensorflow = "^2.9.1"
keras = "^2.9.0"
Pillow = "^9.1.1"
scikit-learn = "^1.1.1"
scikit-image = "^0.19.3"
PyWavelets = "^1.3.0"
numpy = "^1.22.4"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.0"
matplotlib = "^3.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
